--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     	</style>
     </head>
     <body>
-    	<iframe src="https://joshkirk-trade-opt-viewer.streamlit.app/"
+    	<iframe src="https://joshkirk-trade-opt-viewer.streamlit.app/?embedded=true"
     			frameborder="0"
     			marginheight="0"
     			marginwidth="0"
