Update name to check rebuilding

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <html>
     <head>
-    	<title>Trade Optimisation viewer</title>
+    	<title>11Trade Optimisation viewer</title>
     	<style type="text/css">
     		html {
     			overflow: auto;
